--- a/in/bibtex/biblio.bib
+++ b/in/bibtex/biblio.bib
@@ -1800,7 +1800,7 @@
   timestamp = {2012.07.25},
 }
 
-@Article{Cafieri2010,
+@Article{Cafieri2010a,
   author    = {Cafieri, S. and Hansen, P. and Liberti, L.},
   title     = {Loops and multiple edges in modularity maximization of networks},
   journal   = {Physical Review E},
@@ -2079,6 +2079,20 @@
   groups        = {Graph Partitioning, _To do},
   owner         = {Vincent},
   timestamp     = {2017.05.08},
+}
+
+@Article{Chen2012,
+  author    = {Chen, L. and Chai, Y. and Wu, R. and Sun, J. and Ma, T.},
+  title     = {Cluster synchronization in fractional-order complex dynamical networks},
+  journal   = {Physics Letters A},
+  year      = {2012},
+  volume    = {376},
+  number    = {35},
+  pages     = {2381-2388},
+  doi       = {10.1016/j.physleta.2012.05.060},
+  groups    = {Graph Partitioning, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.03},
 }
 
 @Article{Chen2014d,
@@ -2616,7 +2630,7 @@
   volume    = {20},
   number    = {2},
   pages     = {181-187},
-  doi       = {10.1177/001872676702000207},
+  doi       = {10.1177/001872676702000206},
   file      = {:Clustering and Structural Balance in Graphs.pdf:PDF},
   groups    = {Ignored},
   owner     = {Vincent},
@@ -3247,6 +3261,20 @@
   groups    = {Graph Partitioning, Ignored},
   owner     = {Vincent},
   timestamp = {2017.04.03},
+}
+
+@Article{Eustace2014,
+  author    = {Eustace, J. and Wang, X. and Cui, Y.},
+  title     = {Overlapping community detection using neighborhood ratio matrix},
+  journal   = {Physica A},
+  year      = {2015},
+  volume    = {421},
+  pages     = {510-521},
+  doi       = {10.1016/j.physa.2014.11.039},
+  file      = {:Overlapping community detection using neighborhood ratio matrix.pdf:PDF},
+  groups    = {Graph Partitioning, Ignored},
+  owner     = {Vincent},
+  timestamp = {2014.11.29},
 }
 
 @Article{Facchetti2011,
@@ -4102,6 +4130,20 @@
   groups    = {Graph Partitioning, Ignored},
   owner     = {Vincent},
   timestamp = {2012.04.03},
+}
+
+@Article{Gong2012,
+  author    = {Gong, Y.-J. and Zhang, J. and Liu, O. and Huang, R.-Z. and Chung, H. S.-H. and Shi, Y.-H.},
+  title     = {Optimizing the Vehicle Routing Problem With Time Windows: A Discrete Particle Swarm Optimization Approach},
+  journal   = {IEEE Transactions on Systems, Man, and Cybernetics, Part C},
+  year      = {2012},
+  volume    = {42},
+  number    = {2},
+  pages     = {254-267},
+  doi       = {10.1109/tsmcc.2011.2148712},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.03},
 }
 
 @Article{Gong2013b,
@@ -5084,6 +5126,17 @@
   timestamp = {2017.07.01},
 }
 
+@InProceedings{Hu2003,
+  author    = {Hu, X. and Eberhart, R. C. and Shi, Y.},
+  title     = {Particle swarm with extended memory for multiobjective optimization},
+  booktitle = {IEEE Swarm Intelligence Symposium},
+  year      = {2003},
+  doi       = {10.1109/sis.2003.1202267},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.03},
+}
+
 @InProceedings{Hu2009,
   author    = {Hu, X. and Zhang, X. and Lu, C. and Park, E. K. and Zhou, X.},
   title     = {Exploiting Wikipedia as external knowledge for document clustering},
@@ -5095,7 +5148,7 @@
   timestamp = {2017.06.29},
 }
 
-@Article{Hu2012,
+@Article{Hu2012f,
   author    = {Hu, C. and Jiang, H.},
   title     = {Cluster synchronization for directed community networks via pinning partial schemes},
   journal   = {Chaos, Solitons \& Fractals},
@@ -5724,6 +5777,28 @@
   timestamp = {2015.11.07},
 }
 
+@InProceedings{Kennedy1995,
+  author    = {Kennedy, J. and Eberhart, R.},
+  title     = {Particle swarm optimization},
+  booktitle = {International Conference on Neural Networks},
+  year      = {1995},
+  doi       = {10.1109/icnn.1995.488968},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.03},
+}
+
+@InProceedings{Kennedy1997,
+  author    = {Kennedy, J. and Eberhart, R. C.},
+  title     = {A discrete binary version of the particle swarm algorithm},
+  booktitle = {IEEE International Conference on Systems, Man, and Cybernetics},
+  year      = {1997},
+  doi       = {10.1109/icsmc.1997.637339},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.03},
+}
+
 @Article{Kernighan1970,
   author    = {Kernighan, B. W. and Lin, S.},
   title     = {An efficient heuristic procedure for partitioning graphs},
@@ -5935,6 +6010,20 @@
   groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.07.02},
+}
+
+@Article{Knowles2000,
+  author    = {Knowles, J. D. and Corne, D. W.},
+  title     = {Approximating the Nondominated Front Using the Pareto Archived Evolution Strategy},
+  journal   = {Evolutionary Computation},
+  year      = {2000},
+  volume    = {8},
+  number    = {2},
+  pages     = {149-172},
+  doi       = {10.1162/106365600568167},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.03},
 }
 
 @Book{Knuth1994,
@@ -6328,6 +6417,20 @@
   timestamp = {2017.07.01},
 }
 
+@Article{Lancichinetti2009b,
+  author    = {Lancichinetti, A. and Fortunato, S. and Kertész, J.},
+  title     = {Detecting the overlapping and hierarchical community structure in complex networks},
+  journal   = {New Journal of Physics},
+  year      = {2009},
+  volume    = {11},
+  pages     = {033015},
+  doi       = {10.1088/1367-2630/11/3/033015},
+  file      = {:Detecting the overlapping and hierarchical community structure in complex networks.pdf:PDF},
+  groups    = {Graph Partitioning, Ignored},
+  owner     = {Vincent},
+  timestamp = {2010.06.03},
+}
+
 @Article{Lancichinetti2010,
   author    = {Lancichinetti, A. and Kivelä, M. and Saramäki, J. and Fortunato, S.},
   title     = {Characterizing the Community Structure of Complex Networks},
@@ -6667,6 +6770,34 @@
   timestamp = {2012.07.31},
 }
 
+@Article{Leyva2012,
+  author    = {Leyva, I. and Sevilla-Escoboza, R. and Buldú, J. M. and Sendiña-Nadal, I. and Gómez-Gardeñes, J. and Arenas, A. and Moreno, Y. and Gómez, S. and Jaimes-Reátegui, R. and Boccaletti, S.},
+  title     = {Explosive First-Order Transition to Synchrony in Networked Chaotic Oscillators},
+  journal   = {Physical Review Letters},
+  year      = {2012},
+  volume    = {108},
+  number    = {16},
+  doi       = {10.1103/physrevlett.108.168702},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.03},
+}
+
+@Article{Li2008,
+  author    = {Li, D. and Leyva, I. and Almendral, J. A. and Sendiña-Nadal, I. and Buldú, J. M. and Havlin, S. and Boccaletti, S.},
+  title     = {Synchronization interfaces and overlapping communities in complex networks},
+  journal   = {Physical Review Letters},
+  year      = {2008},
+  volume    = {101},
+  number    = {16},
+  pages     = {168701},
+  doi       = {10.1103/PhysRevLett.101.168701},
+  file      = {:Synchronization Interfaces and Overlapping Communities in Complex Networks.pdf:PDF},
+  groups    = {Graph Partitioning, Ignored},
+  owner     = {Vincent},
+  timestamp = {2012.07.29},
+}
+
 @Article{Li2008b,
   author    = {Li, Z. and Zhang, S. and Wang, R.-S. and Zhang, X.-S. and Chen, L.},
   title     = {Quantitative function for community detection},
@@ -6771,6 +6902,20 @@
   timestamp = {2013.05.28},
 }
 
+@Article{Li2013l,
+  author    = {Li, Y. and Wang, H. and Li, J. and Gao, H.},
+  title     = {Efficient Community Detection with Additive Constrains on Large Networks},
+  journal   = {Knowledge-Based Systems},
+  year      = {2013},
+  volume    = {52},
+  pages     = {268-278},
+  doi       = {10.1016/j.knosys.2013.08.003},
+  file      = {:Efficient Community Detection with Additive Constrains on Large Networks.pdf:PDF},
+  groups    = {Graph Partitioning, Ignored},
+  owner     = {Vincent},
+  timestamp = {2013.08.17},
+}
+
 @Article{Li2015o,
   author    = {Li, Z. X. and He, L. L. and Li, Y. R.},
   title     = {A novel multiobjective particle swarm optimization algorithm for signed network community detection},
@@ -6858,6 +7003,34 @@
   groups        = {Graph Partitioning, _To do},
   owner         = {Vincent},
   timestamp     = {2017.06.03},
+}
+
+@Article{Liang2006,
+  author    = {Liang, J. J. and Qin, A. K. and Suganthan, P. N. and Baskar, S.},
+  title     = {Comprehensive learning particle swarm optimizer for global optimization of multimodal functions},
+  journal   = {IEEE Transactions on Evolutionary Computation},
+  year      = {2006},
+  volume    = {10},
+  number    = {3},
+  pages     = {281-295},
+  doi       = {10.1109/tevc.2005.857610},
+  groups    = {Others},
+  owner     = {Vincent},
+  timestamp = {2017.07.03},
+}
+
+@Article{Liao2007,
+  author    = {Liao, C.-J. and Tseng, C.-T. and Luarn, P.},
+  title     = {A discrete version of particle swarm optimization for flowshop scheduling problems},
+  journal   = {Computers \& Operations Research},
+  year      = {2007},
+  volume    = {34},
+  number    = {10},
+  pages     = {3099-3111},
+  doi       = {10.1016/j.cor.2005.11.017},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.03},
 }
 
 @InProceedings{LibenNowell2003,
@@ -7908,6 +8081,19 @@
   timestamp = {2017.07.01},
 }
 
+@Article{Morrissette1967,
+  author    = {Morrissette, J. O.},
+  title     = {No Relations and Relations of Strength Zero in the Theory of Structural Balance},
+  journal   = {Human Relations},
+  year      = {1967},
+  volume    = {20},
+  number    = {2},
+  pages     = {189-195},
+  doi       = {10.1177/001872676702000207},
+  groups    = {Others, Ignored},
+  publisher = {{SAGE} Publications},
+}
+
 @TechReport{Moscato1989,
   author      = {Moscato, P.},
   title       = {On evolution, search, optimization, genetic algorithms and martial arts-towards memetic algorithms},
@@ -8882,6 +9068,20 @@
   timestamp     = {2017.04.30},
 }
 
+@Article{Qu2015,
+  author    = {Qu, Y. and Shi, W. and Shi, X.},
+  title     = {Inferring overlapping community structure with degree-corrected block model},
+  journal   = {Physica A},
+  year      = {2015},
+  volume    = {419},
+  pages     = {48-54},
+  doi       = {10.1016/j.physa.2014.10.025},
+  file      = {:Inferring overlapping community structure with degree-corrected block model.pdf:PDF},
+  groups    = {Graph Partitioning, Ignored},
+  owner     = {Vincent},
+  timestamp = {2014.10.27},
+}
+
 @Article{Radicchi2004,
   author    = {Radicchi, F. and Castellano, C. and Cecconi, F. and Loreto, V. and Parisi, D.},
   title     = {Defining and identifying communities in networks},
@@ -9659,6 +9859,20 @@
   owner     = {Vincent},
   timestamp = {2017.06.14},
   url       = {http://www.utdallas.edu/~tyler.summers/papers/ShamesSummersCantoni2014.pdf},
+}
+
+@Article{Shang2014b,
+  author    = {Shang, J. and Liu, L. and Li, X. and Xie, F. and Wu, C.},
+  title     = {Epidemic spreading on complex networks with overlapping and non-overlapping community structure},
+  journal   = {Physica A},
+  year      = {2015},
+  volume    = {419},
+  pages     = {171-182},
+  doi       = {10.1016/j.physa.2014.10.023},
+  file      = {:Epidemic spreading on complex networks with overlapping and non-overlapping community structure.pdf:PDF},
+  groups    = {Graph Partitioning, Ignored},
+  owner     = {Vincent},
+  timestamp = {2014.10.21},
 }
 
 @Article{Shang2017a,
@@ -11327,6 +11541,20 @@
   groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.06.22},
+}
+
+@Article{XiaodongLi2012,
+  author    = {Li, X. and Yao, X.},
+  title     = {Cooperatively Coevolving Particle Swarms for Large Scale Optimization},
+  journal   = {IEEE Transactions on Evolutionary Computation},
+  year      = {2012},
+  volume    = {16},
+  number    = {2},
+  pages     = {210-224},
+  doi       = {10.1109/tevc.2011.2112662},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.03},
 }
 
 @Article{Xie2013b,
