updating isi data

--- a/in/bibtex/biblio.bib
+++ b/in/bibtex/biblio.bib
@@ -273,7 +273,6 @@
   timestamp = {2017.07.03},
 }
 
-<<<<<<< HEAD
 @Article{Airoldi2008,
   author    = {Airoldi, E. M. and Blei, D. M. and Fienberg, S. E. and Xing, E. P.},
   title     = {Mixed membership stochastic blockmodels},
@@ -287,8 +286,6 @@
   timestamp = {2012.08.21},
 }
 
-=======
->>>>>>> refs/remotes/origin/master
 @Article{Akiyama1981,
   author    = {Akiyama, J. and Avis, D. and Chvátal, V. and Era, H.},
   title     = {Balancing signed graphs},
@@ -922,20 +919,6 @@
   groups    = {Graph Partitioning, Ignored},
   owner     = {Vincent},
   timestamp = {2012.08.25},
-}
-
-@Article{Bandyopadhyay2008,
-  author    = {Bandyopadhyay, S. and Saha, S. and Maulik, U. and Deb, K.},
-  title     = {A Simulated Annealing-Based Multiobjective Optimization Algorithm: AMOSA},
-  journal   = {IEEE Transactions on Evolutionary Computation},
-  year      = {2008},
-  volume    = {12},
-  number    = {3},
-  pages     = {269-283},
-  doi       = {10.1109/tevc.2007.900837},
-  groups    = {Others, Ignored},
-  owner     = {Vincent},
-  timestamp = {2017.07.03},
 }
 
 @Article{Bandyopadhyay2008,
@@ -2110,6 +2093,16 @@
   timestamp = {2017.06.02},
 }
 
+@Book{Burke2014,
+  title     = {Search Methodologies},
+  publisher = {Springer},
+  year      = {2014},
+  author    = {Burke, E. K. and Kendall, G.},
+  doi       = {10.1007/978-1-4614-6940-7},
+  owner     = {Vincent},
+  timestamp = {2017.07.04},
+}
+
 @Article{Burt1976,
   author    = {Burt, R. S.},
   title     = {Positions in networks},
@@ -3098,21 +3091,6 @@
   timestamp = {2017.07.03},
 }
 
-@Article{Deb2002,
-  author    = {Deb, K. and Pratap, A. and Agarwal, S. and Meyarivan, T.},
-  title     = {A fast and elitist multiobjective genetic algorithm: NSGA-II},
-  journal   = {IEEE Transactions on Evolutionary Computation},
-  year      = {2002},
-  volume    = {6},
-  number    = {2},
-  pages     = {182-197},
-  doi       = {10.1109/4235.996017},
-  groups    = {Others, Ignored},
-  owner     = {Vincent},
-  review    = {alt doi: 10.1073/pnas.021544898},
-  timestamp = {2017.07.03},
-}
-
 @Article{Decelle2011,
   author    = {Decelle, A. and Krzakala, F. and Moore, C. and Zdeborová, L.},
   title     = {Inference and Phase Transitions in the Detection of Modules in Sparse Networks},
@@ -3679,6 +3657,18 @@
   timestamp = {2017.06.15},
 }
 
+@InProceedings{Elsner2009,
+  author    = {Elsner, M. and Schudy, W.},
+  title     = {Bounding and comparing methods for correlation clustering beyond ILP},
+  booktitle = {Workshop on Integer Linear Programming for Natural Language Processing},
+  year      = {2009},
+  pages     = {19-27},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.04},
+  url       = {http://dl.acm.org/citation.cfm?id=1611638.1611641},
+}
+
 @Article{Eppstein1994,
   author    = {Eppstein, D.},
   title     = {Arboricity and bipartite subgraph listing algorithms},
@@ -4228,6 +4218,18 @@
   groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.06.28},
+}
+
+@InCollection{Frinhani2011,
+  author    = {Frinhani, R. M. D. and Silva, R. M. A. and Mateus, G. R. and Festa, P. and Resende, M. G. C.},
+  title     = {GRASP with Path-Relinking for Data Clustering: A Case Study for Biological Data},
+  booktitle = {Experimental Algorithms},
+  publisher = {Springer},
+  year      = {2011},
+  pages     = {410-420},
+  doi       = {10.1007/978-3-642-20662-7_35},
+  owner     = {Vincent},
+  timestamp = {2017.07.04},
 }
 
 @Article{Frota2009,
@@ -6467,17 +6469,6 @@
   timestamp = {2017.07.03},
 }
 
-@InProceedings{Khot2004,
-  author    = {Khot, S. and Kindler, G. and Mossel, E. and O'Donnell, R.},
-  title     = {Optimal Inapproximability Results for Max-Cut and Other 2-Variable CSPs?},
-  booktitle = {45th Annual IEEE Symposium on Foundations of Computer Science},
-  year      = {2004},
-  doi       = {10.1109/focs.2004.49},
-  groups    = {Others, Ignored},
-  owner     = {Vincent},
-  timestamp = {2017.07.03},
-}
-
 @Article{Kim2005a,
   author        = {Kim, D.-H. and Jeong, H.},
   title         = {Systematic analysis of group identification in stock markets},
@@ -8634,6 +8625,17 @@
   timestamp = {2017.06.29},
 }
 
+@InProceedings{Miller2009,
+  author    = {Miller, K. and Jordan, M. I. and Griffiths, T. L.},
+  title     = {Nonparametric Latent Feature Models for Link Prediction},
+  booktitle = {22nd International Conference on Neural Information Processing Systems},
+  year      = {2009},
+  pages     = {1276-1284},
+  owner     = {Vincent},
+  timestamp = {2017.07.04},
+  url       = {http://papers.nips.cc/paper/3846-nonparametric-latent-feature-models-for-link-prediction},
+}
+
 @Article{Milo2002,
   author    = {Milo, R. and Shen-Orr, S. and Itzkovitz, S. and Kashtan, N. and Chklovskii, D. and Alon, U.},
   title     = {Network motifs: simple building blocks of complex networks},
@@ -9495,6 +9497,17 @@
   timestamp = {2010.12.23},
 }
 
+@InProceedings{Palla2012,
+  author    = {Palla, Konstantina and Knowles, David and Ghahramani, Zoubin},
+  title     = {An Infinite Latent Attribute Model for Network Data},
+  booktitle = {29th International Conference on Machine Learning},
+  year      = {2012},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.04},
+  url       = {http://icml.cc/2012/papers/785.pdf},
+}
+
 @Article{Palsson2003,
   author    = {Palsson, B. O. and Price, N. D. and Papin, J. A.},
   title     = {Development of network-based pathway definitions: the need to analyze real metabolic networks},
@@ -10116,7 +10129,6 @@
   chapter   = {2},
   pages     = {29-63},
   doi       = {10.1007/0-387-25383-1_2},
-  file      = {:GRASP with Path-Relinking- Recent Advances and Applications.pdf:PDF},
   groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.06.19},
@@ -11059,6 +11071,17 @@
   timestamp = {2017.07.01},
 }
 
+@InProceedings{Sinkkonen2007,
+  author    = {Sinkkonen, J. and Aukia, J. and Kaski, S.},
+  title     = {Inferring vertex properties from topology in large networks},
+  booktitle = {5th International Workshop on Mining and Learning with Graphs},
+  year      = {2007},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.04},
+  url       = {http://research.cs.aalto.fi/pml/papers/nips07_statnet_abstract.pdf},
+}
+
 @Article{Smith1988,
   author    = {Smith, H. L.},
   title     = {Systems of ordinary differential equations which generate an order preserving flow. A survey of results},
@@ -11169,20 +11192,6 @@
   groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.07.01},
-}
-
-@Article{Srinivas1994,
-  author    = {Srinivas, N. and Deb, K.},
-  title     = {Muiltiobjective Optimization Using Nondominated Sorting in Genetic Algorithms},
-  journal   = {Evolutionary Computation},
-  year      = {1994},
-  volume    = {2},
-  number    = {3},
-  pages     = {221-248},
-  doi       = {10.1162/evco.1994.2.3.221},
-  groups    = {Others, Ignored},
-  owner     = {Vincent},
-  timestamp = {2017.07.03},
 }
 
 @Article{Srinivas1994,
@@ -12019,17 +12028,6 @@
   timestamp = {2017.07.03},
 }
 
-@InProceedings{Villalobos-Arias2005,
-  author    = {Villalobos-Arias, M. A. and Pulido, G. T. and Coello Coello, C. A.},
-  title     = {A proposal to use stripes to maintain diversity in a multi-objective particle swarm optimizer},
-  booktitle = {IEEE Swarm Intelligence Symposium},
-  year      = {2005},
-  doi       = {10.1109/sis.2005.1501598},
-  groups    = {Others, Ignored},
-  owner     = {Vincent},
-  timestamp = {2017.07.03},
-}
-
 @InProceedings{Vinh2009,
   author    = {Vinh, N. X. and Epps, J. and Bailey, J.},
   title     = {Information theoretic measures for clusterings comparison},
@@ -12169,7 +12167,6 @@
   timestamp = {2017.06.28},
 }
 
-<<<<<<< HEAD
 @Book{Wasserman1994,
   title     = {Social Network Analysis: Methods and Applications},
   publisher = {Cambridge University Press},
@@ -12184,8 +12181,6 @@
   url       = {http://www.cambridge.org/zw/academic/subjects/sociology/sociology-general-interest/social-network-analysis-methods-and-applications?format=PB&isbn=9780521387071},
 }
 
-=======
->>>>>>> refs/remotes/origin/master
 @Article{Watts1998,
   author    = {Watts, D. J. and Strogatz, S. H.},
   title     = {Collective dynamics of 'small-world' networks},
