updating isi data

--- a/in/bibtex/biblio.bib
+++ b/in/bibtex/biblio.bib
@@ -311,6 +311,21 @@
   timestamp = {2017.07.02},
 }
 
+@Article{Albert1999,
+  author    = {Albert, R. and Jeong, H. and Barabási, A. L.},
+  title     = {Internet: Diameter of the World-Wide Web},
+  journal   = {Nature},
+  year      = {1999},
+  volume    = {401},
+  number    = {6749},
+  pages     = {130-131},
+  doi       = {10.1038/43601},
+  file      = {:Diameter of the world wide web.pdf:PDF},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2010.06.03},
+}
+
 @Article{Albert2000,
   author    = {Albert, R. and Barabási, A. L.},
   title     = {Topology of evolving networks: Local events and universality},
@@ -441,6 +456,18 @@
   groups        = {Others, Ignored},
   owner         = {Vincent},
   timestamp     = {2017.06.22},
+}
+
+@InProceedings{AlMoubayed2012,
+  author    = {Al Moubayed, N. and Petrovski, A. and McCall, J.},
+  title     = {D2MOPSO: Multi-Objective Particle Swarm Optimizer Based on Decomposition and Dominance},
+  booktitle = {European Conference on Evolutionary Computation in Combinatorial Optimization},
+  year      = {2012},
+  pages     = {75-86},
+  doi       = {10.1007/978-3-642-29124-1_7},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.05},
 }
 
 @InProceedings{Alon2005,
@@ -1361,6 +1388,30 @@
   groups    = {Just balance, Ignored},
   owner     = {Vincent},
   timestamp = {2012.08.24},
+}
+
+@Article{Bergh2004,
+  author    = {van den Bergh, F. and Engelbrecht, A. P.},
+  title     = {A Cooperative Approach to Particle Swarm Optimization},
+  journal   = {IEEE Transactions on Evolutionary Computation},
+  year      = {2004},
+  volume    = {8},
+  number    = {3},
+  pages     = {225-239},
+  doi       = {10.1109/tevc.2004.826069},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.05},
+}
+
+@Book{Bezdek1981,
+  title     = {Pattern recognition with fuzzy objective function algorithms},
+  publisher = {Kluwer Academic Publishers},
+  year      = {1981},
+  author    = {Bezdek, J. C.},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.05},
 }
 
 @InProceedings{Bhatia2008,
@@ -2748,6 +2799,20 @@
   url       = {http://eu.wiley.com/WileyCDA/WileyTitle/productCd-1905209045.html},
 }
 
+@Article{Coello2004,
+  author    = {Coello, C. A. C. and Pulido, G. T. and Lechuga, M. S.},
+  title     = {Handling multiple objectives with particle swarm optimization},
+  journal   = {IEEE Transactions on Evolutionary Computation},
+  year      = {2004},
+  volume    = {8},
+  number    = {3},
+  pages     = {256-279},
+  doi       = {10.1109/tevc.2004.826067},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.05},
+}
+
 @InProceedings{CoelloCoello,
   author    = {Coello Coello, C. A. and Lechuga, M. S.},
   title     = {MOPSO: a proposal for multiple objective particle swarm optimization},
@@ -3074,6 +3139,16 @@
   groups    = {Ignored},
   owner     = {Vincent},
   timestamp = {2014.11.17},
+}
+
+@Book{Dawkins1989,
+  title     = {The Selfish Gene},
+  publisher = {Oxford University},
+  year      = {1989},
+  author    = {Dawkins, R.},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.05},
 }
 
 @Article{Deb2002,
@@ -3642,6 +3717,17 @@
   timestamp = {2017.06.28},
 }
 
+@Book{Elias1978,
+  title     = {What is sociology?},
+  publisher = {Columbia University Press},
+  year      = {1978},
+  author    = {Elias, N.},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.05},
+  url       = {http://www.norberteliasfoundation.nl/docs/pdf/05WhatisSociology.pdf},
+}
+
 @Article{ElMaftouhi2012,
   author    = {El Maftouhi, A. and Manoussakis, Y. and Megalakaki, O.},
   title     = {Balance in random signed graphs},
@@ -4072,6 +4158,19 @@
   groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.06.28},
+}
+
+@InProceedings{Folino2010,
+  author    = {Folino, F. and Pizzuti, C.},
+  title     = {Multiobjective evolutionary community detection for dynamic networks},
+  booktitle = {Genetic And Evolutionary Computation Conference},
+  year      = {2010},
+  pages     = {535-536},
+  doi       = {10.1145/1830483.1830580},
+  file      = {:Multiobjective evolutionary community detection for dynamic networks.pdf:PDF},
+  groups    = {Graph Partitioning, Ignored},
+  owner     = {Vincent},
+  timestamp = {2010.07.22},
 }
 
 @Article{Fortunato2007a,
@@ -5316,6 +5415,17 @@
   url           = {http://dl.acm.org/citation.cfm?id=2390956},
 }
 
+@Book{Hastie2009,
+  title     = {The Elements of Statistical Learning},
+  publisher = {Springer},
+  year      = {2009},
+  author    = {Hastie, T. and Tibshirani, R. and Friedman, J.},
+  doi       = {10.1007/978-0-387-84858-7},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.05},
+}
+
 @Article{He2009,
   author    = {He, Y. and Wang, J. and Wang, L. and Chen, Z. J. and Yan, C. and Yang, H. and Tang, H. and Zhu, C. and Gong, Q. and Zang, Y. and Evans, A. C.},
   title     = {Uncovering Intrinsic Modular Organization of Spontaneous Brain Activity in Humans},
@@ -5884,6 +5994,17 @@
   timestamp = {2017.04.09},
 }
 
+@Book{Hughes1996,
+  title     = {Random walks and random environments},
+  publisher = {Clarendon Press},
+  year      = {1996},
+  author    = {Hughes, B. D.},
+  volume    = {1},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.05},
+}
+
 @Article{Hummon1993,
   author    = {Hummon, N. P. and Carley, K.},
   title     = {Social networks as normal science},
@@ -6154,6 +6275,19 @@
   groups    = {Found},
   owner     = {Vincent},
   timestamp = {2015.01.11},
+}
+
+@InProceedings{Jin2010,
+  author    = {Jin, D. and He, D. and Liu, D. and Baquero, C.},
+  title     = {Genetic Algorithm with Local Search for Community Mining in Complex Networks},
+  booktitle = {22nd IEEE International Conference on Tools with Artificial Intelligence},
+  year      = {2010},
+  pages     = {105},
+  doi       = {10.1109/ICTAI.2010.23},
+  file      = {:Genetic Algorithm with Local Search for Community Mining in Complex Networks.pdf:PDF},
+  groups    = {Graph Partitioning, Ignored},
+  owner     = {Vincent},
+  timestamp = {2010.12.23},
 }
 
 @Article{Jin2013,
@@ -6696,6 +6830,20 @@
   timestamp = {2017.07.02},
 }
 
+@Article{Koeppen2006,
+  author    = {Köppen, M. and Veenhuis, C.},
+  title     = {Multi-objective particle swarm optimization by fuzzy-pareto-dominance meta-heuristic},
+  journal   = {International Journal of Hybrid Intelligent Systems},
+  year      = {2006},
+  volume    = {3},
+  number    = {4},
+  pages     = {179-186},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.05},
+  url       = {http://dl.acm.org/citation.cfm?id=1366995.1366996},
+}
+
 @InProceedings{Kolluri2004,
   author        = {Kolluri, R. and Shewchuk, J. R. and O'Brien, J. F.},
   title         = {Spectral surface reconstruction from noisy point clouds},
@@ -6736,6 +6884,20 @@
   groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.06.29},
+}
+
+@Article{Kossinets2009,
+  author    = {Kossinets, G. and Watts, D. J.},
+  title     = {Origins of Homophily in an Evolving Social Network},
+  journal   = {American Journal of Sociology},
+  year      = {2009},
+  volume    = {115},
+  number    = {2},
+  pages     = {405-450},
+  doi       = {10.1086/599247},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.05},
 }
 
 @Article{Krackhardt1987,
@@ -6875,6 +7037,16 @@
   owner     = {Vincent},
   timestamp = {2011.06.29},
   url       = {http://dk.fdv.uni-lj.si/metodoloskizvezki/Pdfs/Mz12KropivnikMrvar.pdf},
+}
+
+@Book{Kuhn1970,
+  title     = {The Structure of Scientific Revolutions},
+  publisher = {University of Chicago Press},
+  year      = {1970},
+  author    = {Kuhn, T. S.},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.05},
 }
 
 @Article{Kulakowski2005,
@@ -7561,6 +7733,20 @@
   owner         = {Vincent},
   timestamp     = {2017.05.06},
   url           = {http://aisel.aisnet.org/pacis2010/136},
+}
+
+@Article{Li2011,
+  author    = {Li, Z. and Ngambusabongsopa, R. and Mohammed, E. and Eustache, N.},
+  title     = {A novel diversity guided particle swarm multi-objective optimization algorithm},
+  journal   = {International Journal of Digital Content Technology and its Applications},
+  year      = {2011},
+  volume    = {5},
+  number    = {1},
+  pages     = {269-278},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.05},
+  url       = {https://pdfs.semanticscholar.org/5464/194fd9c8577f27734c8b2be561ae320e2234.pdf},
 }
 
 @Article{Li2013g,
@@ -9536,6 +9722,17 @@
   timestamp = {2017.06.30},
 }
 
+@InProceedings{Pang2004,
+  author    = {Pang, W. and Wang, K.-P. and Zhou, C.-G. and Dong, L.-J.},
+  title     = {Fuzzy discrete particle swarm optimization for solving traveling salesman problem},
+  booktitle = {4th International Conference on Computer and Information Technology},
+  year      = {2004},
+  doi       = {10.1109/cit.2004.1357292},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.05},
+}
+
 @Article{Papadopoulos2012a,
   author    = {Papadopoulos, S. and Kompatsiaris, Y. and Vakali, A. and Spyridonos, P.},
   title     = {Community detection in Social Media - Performance and application considerations},
@@ -9591,6 +9788,20 @@
   url       = {http://arxiv.org/abs/1203.1394},
 }
 
+@Article{Peng2013,
+  author    = {Peng, Y. and Lu, B.-L.},
+  title     = {A hierarchical particle swarm optimizer with latin sampling based memetic algorithm for numerical optimization},
+  journal   = {Applied Soft Computing},
+  year      = {2013},
+  volume    = {13},
+  number    = {5},
+  pages     = {2823-2836},
+  doi       = {10.1016/j.asoc.2012.05.020},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.05},
+}
+
 @Article{Peters1996,
   author    = {Peters, B. O. and Dünweg, B. and Binder, K. and d'Onorio de Meo, M. and Vollmayr, K.},
   title     = {Finite-size scaling in the p-state mean-field Potts glass: exact statistical mechanics for small samples},
@@ -9633,11 +9844,24 @@
 @InProceedings{Pizzuti2008,
   author    = {Pizzuti, C.},
   title     = {GA-Net: a genetic algorithm for community detection in social networks},
-  booktitle = {10th international conference on Parallel Problem Solving from Nature},
+  booktitle = {10th International Conference on Parallel Problem Solving from Nature},
   year      = {2008},
   pages     = {1081-1090},
   doi       = {10.1007/978-3-540-87700-4_107},
   file      = {:GA-Net- a genetic algorithm for community detection in social networks.pdf:PDF},
+  groups    = {Graph Partitioning, Ignored},
+  owner     = {Vincent},
+  timestamp = {2012.08.18},
+}
+
+@InProceedings{Pizzuti2008a,
+  author    = {Pizzuti, C.},
+  title     = {Community detection in social networks with genetic algorithms},
+  booktitle = {10th Annual Conference on Genetic and Evolutionary Computation},
+  year      = {2008},
+  pages     = {1137-1138},
+  doi       = {10.1145/1389095.1389316},
+  file      = {:Community detection in social networks with genetic algorithms.pdf:PDF},
   groups    = {Graph Partitioning, Ignored},
   owner     = {Vincent},
   timestamp = {2012.08.18},
@@ -10103,6 +10327,20 @@
   timestamp = {2010.11.22},
 }
 
+@Book{Reichardt2009,
+  title     = {Structure in Complex Networks},
+  publisher = {Springer},
+  year      = {2009},
+  author    = {Reichardt, J.},
+  volume    = {766},
+  series    = {Lecture Notes in Physics},
+  doi       = {10.1007/978-3-540-87833-9},
+  file      = {:Structure in Complex Networks.pdf:PDF},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2010.11.22},
+}
+
 @Article{Ren2009,
   author    = {Ren, W. and Yan, G. and Liao, X. and Xiao, L.},
   title     = {Simple probabilistic algorithm for detecting community structure},
@@ -10406,6 +10644,17 @@
   groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.07.03},
+}
+
+@Book{Salton1983,
+  title     = {Introduction to Modern Information Retrieval},
+  publisher = {McGraw-Hill},
+  year      = {1983},
+  author    = {Salton, G. and McGill, M. J.},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.05},
+  url       = {http://dl.acm.org/citation.cfm?id=576628},
 }
 
 @PhdThesis{Sampson1968,
@@ -11057,6 +11306,16 @@
   timestamp = {2017.07.01},
 }
 
+@Book{Simmel1986,
+  title     = {Conflict \& the Web of Group-Affiliations},
+  publisher = {Free Press},
+  year      = {1986},
+  author    = {Simmel, G.},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.05},
+}
+
 @Article{Simpson1949,
   author    = {Simpson, E. H.},
   title     = {Measurement of Diversity},
@@ -11206,6 +11465,20 @@
   groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.07.03},
+}
+
+@InCollection{Srinivasan2005,
+  author    = {Srinivasan, D. and Seow, T. H.},
+  title     = {Particle Swarm Inspired Evolutionary Algorithm (PS-EA) for Multi-Criteria Optimization Problems},
+  booktitle = {Advanced Information and Knowledge Processing},
+  publisher = {Springer},
+  year      = {2005},
+  series    = {Advanced Information and Knowledge Processing},
+  pages     = {147-165},
+  doi       = {10.1007/1-84628-137-7_7},
+  groups    = {Just balance, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.05},
 }
 
 @Article{Srinivasan2011,
@@ -11578,6 +11851,20 @@
   groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.06.28},
+}
+
+@Article{Tasgin2007,
+  author    = {Tasgin, M. and Herdagdelen, A. and Bingol, H.},
+  title     = {Community Detection in Complex Networks Using Genetic Algorithms},
+  journal   = {arXiv},
+  year      = {2007},
+  volume    = {cond-mat.dis-nn},
+  pages     = {0711.0491},
+  file      = {:Community Detection in Complex Networks using Genetic Algorithm.pdf:PDF},
+  groups    = {Graph Partitioning, Ignored},
+  owner     = {Vincent},
+  timestamp = {2010.06.03},
+  url       = {http://arxiv.org/abs/cond-mat/0604419},
 }
 
 @Article{Taylor1967,
@@ -13035,6 +13322,17 @@
   timestamp     = {2017.06.18},
 }
 
+@InProceedings{Zhang2003,
+  author    = {Zhang, L. B. and Zhou, C. Q. and Liu, X. H. and Ma, Z. Q. and Ma, M. and Liang, Y. C.},
+  title     = {Solving multi objective optimization problems using particle swarm optimization},
+  booktitle = {Congress on Evolutionary Computation},
+  year      = {2003},
+  doi       = {10.1109/cec.2003.1299388},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.05},
+}
+
 @Article{Zhang2007,
   author    = {Zhang, S. H. and Wang, R. S. and Zhang, X. S.},
   title     = {Identification of overlapping community structure in complex networks using fuzzy c-means clustering},
@@ -13226,6 +13524,19 @@
   timestamp = {2017.06.29},
 }
 
+@InCollection{Zhou2004b,
+  author    = {Zhou, H. and Lipowsky, R.},
+  title     = {Network Brownian Motion: A New Method to Measure Vertex-Vertex Proximity and to Identify Communities and Subcommunities},
+  booktitle = {International Conference on Computational Science},
+  year      = {2004},
+  pages     = {1062-1069},
+  doi       = {10.1007/978-3-540-24688-6_137},
+  file      = {:Network Brownian Motion- A New Method to Measure Vertex-Vertex Proximity and to Identify Communities and Subcommunities.pdf:PDF},
+  groups    = {Graph Partitioning, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.05},
+}
+
 @Article{Zhou2007,
   author    = {Zhou, T. and Zhao, M. and Chen, G. and Yan, G. and Wang, B.-H.},
   title     = {Phase synchronization on scale-free networks with community structure},
@@ -13308,6 +13619,18 @@
   groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.07.03},
+}
+
+@InProceedings{Zitzler2002,
+  author    = {Zitzler, E. and Laumanns, M. and Thiele, L.},
+  title     = {SPEA2: Improving the strength pareto evolutionary algorithm},
+  booktitle = {Evolutionary Methods for Design Optimization and Control with Applications to Industrial Problems},
+  year      = {2002},
+  pages     = {95-100},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.05},
+  url       = {https://pdfs.semanticscholar.org/6672/8d01f9ebd0446ab346a855a44d2b138fd82d.pdf},
 }
 
 @Article{Ziv2005,
